# ChatVerse

./: .gitignore  Procfile  README.md  data.json  db.sqlite3  requirements.txt
backend/: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/auth/: jwt.py  oauth.py  utils.py
backend/app/models/: channel.py  direct_message.py  user.py
backend/app/routers/: ai_summarizer.py  auth.py  channel_messages.py  channel_websocket.py  channels.py  direct_message.py  health.py  users.py  websocket_manager.py  websocket_routes.py
backend/app/schemas/: channel.py  direct_message.py  user.py
backend/app/services/: ai_summarizer.py  prompts.py
chat/: consumers.py  models.py  routing.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_auto_20210519_1537.py  0003_auto_20211031_1634.py  0004_auto_20211031_1651.py  0005_auto_20211031_2253.py
chat/templates/: base.html  chat.html  history.html  home.html  login.html  register.html  room.html
chat/templates/partials/: messages.html  n.html  (+1 more)
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx
frontend/components/: AuthGuard.tsx  ai-summary-button.tsx  ai-summary-dialog.tsx  app-sidebar.tsx  chat-interface.tsx  login-form.tsx  nav-main.tsx  nav-projects.tsx  nav-recent-chats.tsx  nav-user.tsx  register-form.tsx  user-search.tsx
frontend/contexts/: AuthContext.tsx  ChatContext.tsx
frontend/lib/: api.ts  authUtils.ts  types.ts
kurakani/: asgi.py  settings.py  urls.py  wsgi.py
(+8 files in other folders)
